# habanero

./: .coveragerc  .flake8  .gitignore  .readthedocs.yml  .travis.yml  CODE_OF_CONDUCT.md  Changelog.rst  LICENSE  LICENSE.md  MANIFEST.in  Makefile  README.md  README.rst  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml  issue_template.md
.github/workflows/: black.yml  freebsd.yml  lint.yml  publish.yml  python.yml
docs/: Changelog.rst  Makefile  api.rst  cn.rst  conduct.rst  conf.py  contributing.rst  contributors.rst  counts.rst  index.rst  license.rst
docs/_build/doctrees/: CHANGES.doctree  Changelog.doctree  api.doctree  changelog_link.doctree  cn.doctree  conduct.doctree  contributing.doctree  contributors.doctree  counts.doctree  environment.pickle  exceptions.doctree  filters.doctree  index.doctree  license.doctree  works.doctree
docs/_build/html/: .buildinfo  CHANGES.html  Changelog.html  api.html  changelog_link.html  cn.html  conduct.html  contributing.html  contributors.html  counts.html  exceptions.html  filters.html  genindex.html  index.html  license.html  objects.inv  py-modindex.html  search.html  searchindex.js  works.html
docs/docs/: faq.rst
docs/intro/: install.rst
docs/modules/: counts.rst  crossref.rst  intro.rst  workscontainer.rst  worksquery.rst
habanero/: __init__.py  agency.py  cn_formats.py  cnrequest.py  cross_cite.py  exceptions.py  facets.py  field_queries.py  filterhandler.py  habanero.py  habanero_utils.py  members.py  noworks.py  request.py  request_class.py  response.py  select.py  sort.py  works.py
habanero/cn/: __init__.py  cn.py  constants.py  styles.py
habanero/counts/: __init__.py  counts.py
habanero/crossref/: __init__.py  crossref.py  crossrefworks.py  filters.py  workscontainer.py  worksquery.py
habanero/filters/: __init__.py  filters.py
habanero/test/: test-works.py
pydoi/: __init__.py  works.py
test/: test-content_negotation.py  test-crossrefworks.py  test-cursor.py  test-facets.py  test-field_queries.py  test-filters.py  test-funders.py  test-journals.py  test-licenses.py  test-members.py  test-pagination_params.py  test-prefixes.py  test-random_dois.py  test-registration_agency.py  test-select.py  test-settings.py  test-sort.py  test-types.py  test-works.py  test-workscontainer.py  test-worksquery.py  test_gni.py
test/cassettes/test-content_negotation/: test_content_negotiation.yaml  test_content_negotiation_alt_url.yaml  test_content_negotiation_bad_bibtex.yaml  test_content_negotiation_citeproc_json.yaml  test_content_negotiation_raises_an_http_error_with_bad_requests.yaml  test_content_negotiation_style.yaml  test_content_negotiation_throws_warnings.yaml  test_content_negotiation_throws_warnings_can_be_suppressed.yaml  test_content_negotiation_with_unicode_doi.yaml
test/cassettes/test-crossrefworks/: test_crossrefworks_with_many.yaml  test_crossrefworks_with_one_id.yaml  test_crossrefworks_with_two_ids.yaml
test/cassettes/test-cursor/: test_cursor.yaml  test_cursor_fails_cursor_value.yaml  test_cursor_max.yaml
test/cassettes/test-funders/: test_funders.yaml  test_funders_bad_id_warn.yaml  test_funders_bad_id_works_warn.yaml  test_funders_fail_limit.yaml  test_funders_fail_offset.yaml  test_funders_fail_sort.yaml  test_funders_field_queries.yaml  test_funders_filter_fails_noids.yaml  test_funders_filter_fails_noidsworks.yaml  test_funders_filter_works.yaml  test_funders_mixed_ids_warn.yaml  test_funders_mixed_ids_works_warn.yaml  test_funders_query.yaml  test_funders_query_filters_not_allowed_with_dois.yaml  test_funders_sample_err.yaml
test/cassettes/test-journals/: test_journals.yaml  test_journals_bad_id_warn.yaml  test_journals_bad_id_works_warn.yaml  test_journals_fail_limit.yaml  test_journals_fail_offset.yaml  test_journals_fail_sort.yaml  test_journals_field_queries.yaml  test_journals_field_queries_not_allowed_with_dois.yaml  test_journals_filter_fails_noids.yaml  test_journals_filter_fails_noidsworks.yaml  test_journals_ids.yaml  test_journals_mixed_ids_warn.yaml  test_journals_mixed_ids_works_warn.yaml  test_journals_query.yaml  test_journals_works.yaml
test/cassettes/test-licenses/: test_licenses.yaml  test_licenses_query.yaml
test/cassettes/test-members/: test_members.yaml  test_members_bad_id_warn.yaml  test_members_bad_id_works_warn.yaml  test_members_field_queries.yaml  test_members_filter.yaml  test_members_mixed_ids_warn.yaml  test_members_mixed_ids_works_warn.yaml  test_members_query.yaml  test_members_query_filters_not_allowed_with_dois.yaml  test_members_sample_err.yaml
test/cassettes/test-pagination_params/: test_limit_of_zero_with_id.yaml  test_limit_of_zero_without_id.yaml  test_offset_of_zero_with_id.yaml  test_offset_of_zero_without_id.yaml
test/cassettes/test-prefixes/: test_prefixes.yaml  test_prefixes_bad_id_warn.yaml  test_prefixes_bad_id_works_warn.yaml  test_prefixes_field_queries.yaml  test_prefixes_works.yaml  (+4 more)
test/data/: species_list.txt
test/vcr_cassettes/: cn.yaml  cn_alturl.yaml  cn_badrequest.yaml  cn_citeproc.yaml  cn_style.yaml  cn_unicodedoi.yaml  cursor.yaml  cursor_cursormax.yaml  cursor_err1.yaml  funders.yaml  funders_err_fail_limit.yaml  funders_err_fail_offset.yaml  funders_err_fail_sort.yaml  funders_field_queries.yaml  funders_filter_fails_noids.yaml  funders_filter_fails_noidsworks.yaml  funders_filter_works.yaml  funders_filters_not_allowed_with_dois.yaml  funders_query.yaml  funders_query_title_not_allowed_anymore.yaml  funders_sample.yaml  funders_sample_err.yaml  journals.yaml  journals_fail_limit.yaml  journals_fail_offset.yaml  journals_fail_sort.yaml  journals_field_queries.yaml  journals_field_queries_not_allowed_with_dois.yaml  journals_filter_fails_noids.yaml  journals_filter_fails_noidsworks.yaml  journals_filters_not_allowed_with_dois.yaml  journals_ids.yaml  journals_query.yaml  journals_query_title_not_allowed_anymore.yaml  journals_works.yaml  licenses.yaml  licenses_query.yaml  limit_of_zero_with_id.yaml  limit_of_zero_without_id.yaml  members.yaml  (+40 more)
(+76 files in other folders)
