[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "habanero/__init__.py"

[project]
name = "habanero"
dynamic = ["version"]
description = "Low Level Client for Crossref Search API"
maintainers = [
  { name = "Scott Chamberlain", email = "myrmecocystus@gmail.com" },
]
readme = "README.rst"
license = { file = "LICENSE.md" }
requires-python = ">=3.10"
dependencies = [
  "httpx>=0.27.2",
  "packaging>=24.1",
  "pyyaml>=6.0.2",
  "tqdm>=4.66.5",
  "urllib3>=2.2.2,<3.0.0",
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Natural Language :: English",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

[project.urls]
Homepage = "https://github.com/sckott/habanero"
Documentation = "https://habanero.readthedocs.io/"
Repository = "https://github.com/sckott/habanero"
"Bug Tracker" = "https://github.com/sckott/habanero/issues"
Changelog = "https://github.com/sckott/habanero/blob/main/Changelog.rst"

[tool.setuptools.dynamic]
version = { attr = "habanero.__version__" }

[tool.ruff]
line-length = 88

exclude = ["build", "dist"]

lint.ignore = ["D102"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401", "F403"]
"habanero/request_class.py" = ["E722"]
"test/*" = ["E501"]
"habanero/*" = ["E501"]

# from https://github.com/pypa/setuptools/discussions/3627
[project.optional-dependencies]
bibtex = ["bibtexparser>=2.0.0b7"]

[dependency-groups]
dev = [
    "codecov>=2.1.13",
    "docutils>=0.21.2",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "pytest-recording>=0.13.4",
    "ruff>=0.14.0",
    "sphinx>=8.1.3",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-issuetracker>=0.11",
    "vcrpy>=5.1.0",
]

[tool.setuptools.packages.find]
exclude = ["docs*", "test*"]
