[metadata]

name = habanero
description = Low Level Client for Crossref Search API
long_description = file: README.rst, Changelog.rst
long_description_content_type = text/plain; charset=utf-8
url = https://github.com/sckott/habanero
author = Scott Chamberlain
author_email = myrmecocystus@gmail.com
license = MIT
license_file = docs/LICENSE.rst
version = attr: habanero.__version__
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Bio-Informatics
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
project_urls = 
    Documentation = http://habanero.rtfd.org/
    Source = https://github.com/sckott/habanero
    Tracker = https://github.com/sckott/habanero/issues

[options]
zip_safe = False
include_package_data = True
packages = find:
platforms = any
python_requires = >=3.7
setup_requires =
    setuptools_scm
install_requires=
    requests>=2.7.0
    tqdm

[options.packages.find]
exclude = 
    test*

[bdist_wheel]
universal = 1

[options.extras_require]
test =
    pytest
all =
    %(test)s
